--- a/list.html
+++ b/list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-Hant-TW">
 
 <head>
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#b483a6">
     <meta name="msapplication-navbutton-color" content="#b483a6">
     <meta name="apple-mobile-web-app-status-bar-style" content="#b483a6">
-    <meta name="author" content="UTRUST 信諾科技" />
+    <meta name="author" content="Xnet 智媒科技" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta property="og:title" content="" />
@@ -563,7 +563,7 @@
                                     <div class="thumbnail">
                                         <div class="pic effect col-md-4 col-sm-4 col-xs-12">
                                             <img src="https://images.unsplash.com/photo-1510231583251-74be0f578e59?ixlib=rb-0.3.5&s=791d99d14f9d4e17ce14aa35d413d9bf&auto=format&fit=crop&w=1350&q=80"
-                                                alt="" title="如何選擇適合自己的內容管理系統（CMS）">
+                                                 alt="" title="如何選擇適合自己的內容管理系統（CMS）">
                                             <a class="view-more" href="detail.html" title="了解更多">
                                                 <span>more</span>
                                             </a>
