--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#b483a6">
     <meta name="msapplication-navbutton-color" content="#b483a6">
     <meta name="apple-mobile-web-app-status-bar-style" content="#b483a6">
-    <meta name="author" content="UTRUST 信諾科技" />
+    <meta name="author" content="Xnet 智媒科技" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta property="og:title" content="" />
