--- a/hp.html
+++ b/hp.html
@@ -497,7 +497,7 @@
                     <!--熱門文章區塊-->
                     <div class="main-content">
                         <div class=main-content-inner>
-                            <h1 class="new-index-main-title text-center">Popular</h1>
+                            <h1 class="new-index-main-title text-center">熱門文章</h1>
                             <div class="news-wrap">
                                 <div class="divide20"></div>
                                 <div class="col-md-4 col-sm-6 col-xs-12">
