--- a/login.html
+++ b/login.html
@@ -22,8 +22,8 @@
     <meta name="robots" content="noindex,follow" />
     <meta name="robots" content="index,nofollow" />
     <meta name="robots" content="noindex,nofollow" />
-    <title>會員中心 │ 藝時代 Cultural Launch</title>
-    <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">   
+    <title>會員中心 │ 創藝時代 Cultural Launch</title>
+    <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="0">
     <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="Mon, 22 Jul 2002 11:12:01 GMT">
@@ -116,6 +116,17 @@
             $(".footer").load("footer.html")
         }
     </script>
+    <script>
+        function Auth() {
+            var URL = 'https://access.line.me/oauth2/v2.1/authorize?';
+            URL += 'response_type=code';
+            URL += '&client_id=1620848228';
+            URL += '&redirect_uri=http://' + location.host + '/lib/linelogin.ashx';
+            URL += '&state=login&scope=openid%20profile&nonce=abc';
+            window.location.href = URL;
+        }
+     
+    </script>
 </head>
 
 <body class="login-bg">
@@ -126,7 +137,7 @@
                 <div class="login-box">
                     <div class="login-header text-center">
                         <div class="login-logo ">
-                            <a href="/index" title="藝時代 Cultural Launch">藝時代</a>
+                            <a href="/index" title="創藝時代 Cultural Launch">創藝時代</a>
                         </div>
                         <div class="login-box-title">登入</div>
                     </div>
@@ -138,9 +149,12 @@
                             <button type="button" class="btn btn-facebook btn-lg btn-block">
                                 <i class="fa fa-facebook" aria-hidden="true"></i>使用Facebook登入
                             </button>
-                    
+                            <!--
+    <button type="button" class="btn btn-green  btn-block" id="lineLogin" onclick="Auth();">
+        <img src="/images/line.png" />
+    </button>-->
                             <div class="divide20"></div>
-                            <label>或使用藝時代帳號登入</label>
+                            <label>或使用創藝時代帳號登入</label>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
