--- a/registered.html
+++ b/registered.html
@@ -105,8 +105,8 @@
         </div>
         <!-- row END -->
     </div>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/swipe/swiper.min.js"></script>
     <script src='js/device.js'></script>
